# larcoreobj

./: .gitignore  CMakeLists.txt  GNUmakefile
larcoreobj/: CMakeLists.txt  GNUmakefile
larcoreobj/GeoAlgo/: .depend  CMakeLists.txt  GNUmakefile  classes.h
larcoreobj/Geometry/: AuxDetChannelMapAlg.cxx  AuxDetExptGeoHelperInterface.h  AuxDetGeo.cxx  AuxDetGeo.h  AuxDetGeoObjectSorter.cxx  AuxDetGeometry.h  AuxDetGeometryCore.cxx  AuxDetGeometryCore.h  AuxDetGeometry_service.cc  AuxDetSensitiveGeo.cxx  BoxBoundedGeo.cxx  CMakeLists.txt  ChannelMapAlg.cxx  ChannelMapStandardAlg.cxx  ChannelMapStandardAlg.h  CryostatGeo.cxx  CryostatGeo.h  DumpChannelMap_module.cc  ExptGeoHelperInterface.h  GNUmakefile  GeoObjectSorter.cxx  GeoObjectSorterStandard.cxx  GeoObjectSorterStandard.h  Geometry.h  GeometryCore.cxx  GeometryCore.h  Geometry_service.cc  LinkDef.h  OpDetGeo.cxx  PlaneGeo.cxx  PlaneGeo.h  StandardGeometryHelper.h  StandardGeometryHelper_service.cc  TPCGeo.cxx  TPCGeo.h  WireGeo.cxx  geometry.fcl  geometry_argoneut.fcl  geometry_bo.fcl  geometry_csu40L.fcl  (+2 more)
larcoreobj/Geometry/gdml/: argoneut.gdml  argoneut_geo.C  bo.gdml  bo_geo.C  csu40l.gdml  generate_ICARUS.pl  generate_gdml_simple.pl  generate_gdml_test.pl  generate_voltpc.pl  icarus.gdml  icarus_nowires.gdml  jp250L.gdml  lariat_wdisk.gdml  longbo.gdml  materials.gdml  voltpc.gdml
larcoreobj/Geometry/gdml/argoneut/: argo-cryostat.gdml  argo-enclosure.gdml  argo-plane-collection.gdml  argo-plane-induction.gdml  argo-plane.gdml  argo-shieldplane.gdml  argo-tpc.gdml  argo-world.gdml
larcoreobj/Geometry/gdml/bo/: bo-cryostat.gdml  bo-defs.gdml  bo-plane.gdml  bo-rotations.gdml  bo-tpc.gdml  bo-world.gdml
larcoreobj/SimpleTypesAndConstants/: CMakeLists.txt  GNUmakefile  LinkDef.h
larcoreobj/SummaryData/: CMakeLists.txt  GNUmakefile  LinkDef.h
larcoreobj/SummaryData/SampledDicts/: CMakeLists.txt
test/: CMakeLists.txt  GNUmakefile
test/SimpleTypesAndConstants/: CMakeLists.txt  GNUmakefile  LinkDef.h
ups/: product-config.cmake.in  product_deps  setup_for_development
